# micro-machine

./: .gitignore  CMakeLists.txt  Meeting-notes.md  README.md  documentation  game-architecture.md  gameflow.md
doc/html/: ALCheck_8hpp_source.html  Activity_8hpp_source.html  AlResource_8hpp_source.html  Android_2ClipboardImpl_8hpp_source.html  Android_2CursorImpl_8hpp_source.html  Android_2InputImpl_8hpp_source.html  Android_2JoystickImpl_8hpp_source.html  Android_2SensorImpl_8hpp_source.html  AudioDevice_8hpp_source.html  Audio_2Export_8hpp_source.html  Audio_8hpp_source.html  AutoreleasePoolWrapper_8hpp_source.html  BlendMode_8hpp_source.html  CircleShape_8hpp_source.html  ClipboardImpl_8hpp_source.html  Clipboard_8hpp_source.html  Clock_8hpp_source.html  Color_8hpp_source.html  Config_8hpp_source.html  ContactListener_8hpp_source.html  ContextSettings_8hpp_source.html  Context_8hpp_source.html  ConvexShape_8hpp_source.html  CursorImpl_8hpp_source.html  Cursor_8hpp_source.html  DRMContext_8hpp_source.html  DRM_2ClipboardImpl_8hpp_source.html  DRM_2CursorImpl_8hpp_source.html  Display_8hpp_source.html  Drawable_8hpp_source.html  EGLCheck_8hpp_source.html  EaglContext_8hpp_source.html  EglContext_8hpp_source.html  Err_8hpp_source.html  Event_8hpp_source.html  FileInputStream_8hpp_source.html  Font_8hpp_source.html  FreeBSD_2JoystickImpl_8hpp_source.html  Ftp_8hpp_source.html  GLCheck_8hpp_source.html  (+2985 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_2.js  all_3.js  (+172 more)
doc/latex/: GpuPreference_8hpp.tex  GpuPreference_8hpp.tex.tmp  GpuPreference_8hpp__incl.dot  annotated.tex  arm64_2include_2box2d_2b2__collision_8h.tex  arm64_2include_2box2d_2b2__collision_8h__dep__incl.dot  arm64_2include_2box2d_2b2__collision_8h__incl.dot  arm64_2include_2box2d_2b2__common_8h.tex  arm64_2include_2box2d_2b2__common_8h__dep__incl.dot  arm64_2include_2box2d_2b2__common_8h__incl.dot  arm64_2include_2box2d_2b2__settings_8h.tex  arm64_2include_2box2d_2b2__settings_8h__dep__incl.dot  arm64_2include_2box2d_2b2__settings_8h__incl.dot  categoryNSImage_07raw_08.tex  categoryNSWindow_07SFML_08.tex  categorySFAppDelegate_07_08.tex  categorySFOpenGLView_07_08.tex  categorySFOpenGLView_07keyboard_08.tex  categorySFOpenGLView_07keyboard__priv_08.tex  categorySFOpenGLView_07mouse_08.tex  categorySFOpenGLView_07mouse__priv_08.tex  categorySFView_07_08.tex  categorySFWindowController_07_08.tex  classBarEnvironment.tex  classBase.tex  classBaseMenu.tex  classBaseMenu.tex.tmp  classBaseMenu__coll__graph.dot  classBaseMenu__inherit__graph.dot  classBiggestIntConvertible.tex  classBuff.tex  classBuff__coll__graph.dot  classBuff__inherit__graph.dot  classCat.tex  classCat__coll__graph.dot  classCat__inherit__graph.dot  classCheckPoint.tex  classCheckPoint__coll__graph.dot  classCheckPoint__inherit__graph.dot  classChildClassWithStreamOperator.tex  (+1318 more)
meeting-notes/: Meeting-notes.md
meeting-notes/plan/: game-architecture.md  gui-plan.md
plan/: micro_machine_plan.pdf:Zone.Identifier
src/: ContactListener.cpp  ContactListener.hpp  baseMenu.cpp  buff.hpp  cat.cpp  checkpoint.cpp  collectable.hpp  collectableBad.cpp  collectableBad.hpp  collectableGood.hpp  collectableSuper.cpp  collectableSuper.hpp  colletable.cpp  colletableGood.cpp  constant.h  contactlistener.cpp  contactlistener.hpp  game.cpp  game.hpp  horse.cpp  main.cpp  map.cpp  menu.cpp  menu2.cpp  negativeBuff.cpp  obstacle.cpp  obstacle.hpp  outsideArea.cpp  ox.cpp  ox.hpp  positiveBuff.cpp  reScale.cpp  realTime.cpp  resourceManager.cpp  resources.json  timer.cpp  timer.hpp  userDataPointer.cpp  userDataPointer.hpp  usertype.hpp  (+4 more)
src/include/: ContactListener.hpp  baseMenu.hpp  box2dInclude.hpp  buff.hpp  buffVector.hpp  cat.hpp  checkpoint.hpp  collectable.hpp  collectableBad.hpp  collectableGood.hpp  collectableSuper.hpp  constant.h  constant.hpp  dog.hpp  game.hpp  horse.hpp  map.hpp  menu.hpp  menu2.hpp  negativebuff.hpp  obstacle.hpp  outsideArea.hpp  ox.hpp  positivebuff.hpp  postitivebuff.hpp  reScale.hpp  realTime.hpp  resourceManager.hpp  timer.hpp  userDataPointer.hpp  vehicle.hpp  winnerBoard.hpp  world.hpp
src/maps/: forest.json  ocean.json
tests/: CMakeLists.txt  readme.md  timerTest.cpp  vehicleTest.cpp
(+1 files in other folders)
